Shopにステートマシンを追加。

--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -62,9 +62,6 @@
     <ClCompile Include="GameObject\Village\NPC.cpp">
       <Filter>GameObject\Village</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\Village\Shop.cpp">
-      <Filter>GameObject\Village</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\Village\TextBox.cpp">
       <Filter>GameObject\Village</Filter>
     </ClCompile>
@@ -179,6 +176,25 @@
     <ClCompile Include="GameObject\Village\EventManager.cpp">
       <Filter>GameObject\Village</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\AttackValue2D.cpp" />
+    <ClCompile Include="GameObject\Village\Shop\Shop.cpp">
+      <Filter>GameObject\Village\Shop</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Select.cpp">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Confirmation.cpp">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Buy.cpp">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Sell.cpp">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Close.cpp">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AttackCollision.h" />
@@ -245,9 +261,6 @@
       <Filter>GameObject\Village</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Village\NPC.h">
-      <Filter>GameObject\Village</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\Shop.h">
       <Filter>GameObject\Village</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Village\TextBox.h">
@@ -372,6 +385,28 @@
     <ClInclude Include="GameObject\Village\EventManager.h">
       <Filter>GameObject\Village</Filter>
     </ClInclude>
+    <ClInclude Include="GameObject\AttackValue2D.h" />
+    <ClInclude Include="GameObject\Village\Shop\Shop.h">
+      <Filter>GameObject\Village\Shop</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\Shop\HFSM\ShopState.h">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Select.h">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Buy.h">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Confirmation.h">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Sell.h">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Close.h">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Decide.rc" />
@@ -431,6 +466,12 @@
     </Filter>
     <Filter Include="GameObject\History\HistoryBook\Page\State">
       <UniqueIdentifier>{ef2cac17-12ce-4df5-96f6-6e032d477818}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject\Village\Shop">
+      <UniqueIdentifier>{b2854e21-cf70-427a-bacf-a7a64cf6f1fc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject\Village\Shop\HFSM">
+      <UniqueIdentifier>{e3231ba5-9d3e-4a01-8f07-a91a8383e0fd}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
