--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -157,6 +157,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AttackCollision.h" />
+    <ClInclude Include="ConsumptionItem.h" />
     <ClInclude Include="Decide.h" />
     <ClInclude Include="GameLight.h" />
     <ClInclude Include="GameObject\AttackValue2D.h" />
@@ -229,6 +230,10 @@
     <ClInclude Include="GameObject\Village\Shop\Shop.h" />
     <ClInclude Include="GameObject\Village\TextBox.h" />
     <ClInclude Include="GameSystem.h" />
+    <ClInclude Include="HoldArmor.h" />
+    <ClInclude Include="HoldItemBase.h" />
+    <ClInclude Include="HoldWeapon.h" />
+    <ClInclude Include="Money2D.h" />
     <ClInclude Include="Ocean.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scene\GameScene.h" />
@@ -237,6 +242,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AttackCollision.cpp" />
+    <ClCompile Include="ConsumptionItem.cpp" />
     <ClCompile Include="Decide.cpp" />
     <ClCompile Include="GameLight.cpp" />
     <ClCompile Include="GameObject\AttackValue2D.cpp" />
@@ -304,6 +310,10 @@
     <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Sell.cpp" />
     <ClCompile Include="GameObject\Village\Shop\Shop.cpp" />
     <ClCompile Include="GameObject\Village\TextBox.cpp" />
+    <ClCompile Include="HoldArmor.cpp" />
+    <ClCompile Include="HoldItemBase.cpp" />
+    <ClCompile Include="HoldWeapon.cpp" />
+    <ClCompile Include="Money2D.cpp" />
     <ClCompile Include="Ocean.cpp" />
     <ClCompile Include="Scene\GameScene.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
