--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -210,6 +210,13 @@
     <ClCompile Include="GameObject\Inventory\Inventory.cpp">
       <Filter>GameObject\Inventory</Filter>
     </ClCompile>
+    <ClCompile Include="Money2D.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="HoldItemBase.cpp" />
+    <ClCompile Include="HoldWeapon.cpp" />
+    <ClCompile Include="ConsumptionItem.cpp" />
+    <ClCompile Include="HoldArmor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AttackCollision.h" />
@@ -432,6 +439,13 @@
     <ClInclude Include="GameObject\Inventory\Inventory.h">
       <Filter>GameObject\Inventory</Filter>
     </ClInclude>
+    <ClInclude Include="Money2D.h">
+      <Filter>GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="HoldItemBase.h" />
+    <ClInclude Include="HoldWeapon.h" />
+    <ClInclude Include="ConsumptionItem.h" />
+    <ClInclude Include="HoldArmor.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Decide.rc" />
