--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -189,9 +189,6 @@
     <ClCompile Include="GameObject\Village\Shop\Shop.cpp">
       <Filter>GameObject\Village\Shop</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Buy.cpp">
-      <Filter>GameObject\Village\Shop\HFSM</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Close.cpp">
       <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClCompile>
@@ -199,9 +196,6 @@
       <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Select.cpp">
-      <Filter>GameObject\Village\Shop\HFSM</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Sell.cpp">
       <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\ItemManager\ItemManager.cpp">
@@ -227,6 +221,9 @@
     </ClCompile>
     <ClCompile Include="GameObject\StatusWindow\ItemWindow.cpp">
       <Filter>GameObject\StatusWindow</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Trade.cpp">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -426,9 +423,6 @@
     <ClInclude Include="GameObject\Village\Shop\Shop.h">
       <Filter>GameObject\Village\Shop</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Buy.h">
-      <Filter>GameObject\Village\Shop\HFSM</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Close.h">
       <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClInclude>
@@ -436,9 +430,6 @@
       <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Select.h">
-      <Filter>GameObject\Village\Shop\HFSM</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Sell.h">
       <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Village\Shop\HFSM\ShopState.h">
@@ -468,6 +459,9 @@
     </ClInclude>
     <ClInclude Include="GameObject\StatusWindow\ItemWindow.h">
       <Filter>GameObject\StatusWindow</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Trade.h">
+      <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
