--- a/game/fbEngine/fbEngine/fbEngine.vcxproj.filters
+++ b/game/fbEngine/fbEngine/fbEngine.vcxproj.filters
@@ -22,9 +22,6 @@
     <Filter Include="Resource">
       <UniqueIdentifier>{3ba0883e-7d34-4a03-9992-4a04a2da02fd}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Support">
-      <UniqueIdentifier>{f58ec9e8-9358-45f6-aeaf-76135b8851b6}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Object">
       <UniqueIdentifier>{f81acd50-cf41-4d0e-8092-e796ae815671}</UniqueIdentifier>
     </Filter>
@@ -54,6 +51,9 @@
     </Filter>
     <Filter Include="Nature">
       <UniqueIdentifier>{37cce69d-c542-48e5-9b75-b797d9182095}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource\Support">
+      <UniqueIdentifier>{f58ec9e8-9358-45f6-aeaf-76135b8851b6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -97,16 +97,16 @@
       <Filter>Resource</Filter>
     </ClCompile>
     <ClCompile Include="_Support\Random.cpp">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClCompile>
     <ClCompile Include="_Support\RenderTargetManager.cpp">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClCompile>
     <ClCompile Include="_Support\Support.cpp">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClCompile>
     <ClCompile Include="_Support\Time.cpp">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClCompile>
     <ClCompile Include="_System\Game.cpp">
       <Filter>System</Filter>
@@ -270,6 +270,9 @@
     <ClCompile Include="_Object\_Component\_Physics\CapsuleColliderZ.cpp">
       <Filter>Object\Component\Physics</Filter>
     </ClCompile>
+    <ClCompile Include="_Inputs\VirtualPad.cpp">
+      <Filter>Input</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="_Inputs\InputManager.h">
@@ -327,22 +330,22 @@
       <Filter>Resource</Filter>
     </ClInclude>
     <ClInclude Include="_Support\Assert.h">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClInclude>
     <ClInclude Include="_Support\PIXPerfTag.h">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClInclude>
     <ClInclude Include="_Support\Random.h">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClInclude>
     <ClInclude Include="_Support\RenderTargetManager.h">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClInclude>
     <ClInclude Include="_Support\Support.h">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClInclude>
     <ClInclude Include="_Support\Time.h">
-      <Filter>Support</Filter>
+      <Filter>Resource\Support</Filter>
     </ClInclude>
     <ClInclude Include="_System\Game.h">
       <Filter>System</Filter>
@@ -523,6 +526,9 @@
     </ClInclude>
     <ClInclude Include="_Object\_Component\_Physics\CapsuleColliderZ.h">
       <Filter>Object\Component\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="_Inputs\VirtualPad.h">
+      <Filter>Input</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
