--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -239,6 +239,8 @@
     <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Trade.cpp">
       <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Enemy\EnemyDrarian.cpp" />
+    <ClCompile Include="HoldEquipment.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AttackCollision.h" />
@@ -491,6 +493,8 @@
     <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Trade.h">
       <Filter>GameObject\Village\Shop\HFSM</Filter>
     </ClInclude>
+    <ClInclude Include="GameObject\Enemy\EnemyDrarian.h" />
+    <ClInclude Include="HoldEquipment.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Decide.rc" />
